--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My Express App</title>
-	<link href="https://cdn.tailwindcss.com" rel="stylesheet">
+	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-200">
 	<div class="container mx-auto mt-8">
