--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body class="bg-gray-200">
 	<div class="container mx-auto mt-8">
-		<form method="POST" action="/" class="p-8 bg-white rounded-lg shadow-md">
+		<form method="POST" action="/save" class="p-8 bg-white rounded-lg shadow-md">
 			<label for="text-input" class="block mb-2 font-medium">Enter some text:</label>
 			<input type="text" id="text-input" name="text-input" class="w-full px-4 py-2 mb-4 border rounded-lg">
 			<button type="submit" class="px-4 py-2 text-white transition-colors duration-200 bg-blue-500 rounded-lg hover:bg-blue-600">Submit</button>
